compiler/testData/loadJava/kotlinSignature/error/WrongFieldName.kt
package test

import java.util.*

public open class WrongFieldName : Object() {
    public val foo : String? = ""
}
